[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vfcommons"
version = "0.2.0"
authors = [{name = "Lucas Felipe", email = "lfanjosus@gmail.com"}]
description = "Standardized Pydantic Models and Errors for Enhanced Inter-API Communication"
readme = "README.md"
license = {file="LICENSE"}
dependencies = [
    "pydantic>=1.8.2",
    "fastapi>=0.65.0"
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
