[tool.poetry]
name = "vfcommons"
version = "0.2.0"
description = "Standardized Pydantic Models and Errors for Enhanced Inter-API Communication"
authors = ["Lucas Felipe <lfanjosus@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.2"
fastapi = "^0.109.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
