[tool.poetry]
name = "vfcommons"
version = "0.2.0"
description = "Standardized Pydantic Models and Errors for Enhanced Inter-API Communication"
authors = ["Lucas Felipe <lfanjosus@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.6.1"
fastapi = "^0.109.2"
cryptography = "^42.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
